# legal-rag

./: .gitignore  README.md  pyproject.toml
frontend/: ui.py
src/: __init__.py
src/api/: schemas.py  server.py
src/api/routers/: __init__.py  chat.py  ingest.py
src/core/: __init__.py  config.py  vector_db.py
src/rag/: __init__.py  chain.py  ingestion.py  retriever.py
src/templates/: contextualize.jinja  qa_system.jinja
