[project]
name = "legal-rag"
version = "0.3.0"
description = "Legal RAG Microservices - Vietnamese Legal Assistant with Hybrid Search & Reranking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    
    # Template Engine
    "jinja2>=3.1.0",
    
    # LangChain Ecosystem
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "langchain-qdrant>=0.2.0",
    
    # Vector DB & Embeddings
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    
    # ML & Data Processing
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "torch>=2.0.0",
    
    # Frontend
    "streamlit>=1.40.0",
    
    # Async Support
    "aiofiles>=24.0.0",
]

[project.scripts]
legal-api = "src.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "frontend"]
